blockml/test/errors/05_join/e122/e122m.model
model: e122m
joins:
- from_view: e122_one
  hidden:   
  - 5
  as: a
